--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "vite": "^5.0.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@tailwindcss/vite": "^4.1.3",
-    "alpinejs": "^3.14.9"
+    "alpinejs": "^3.14.9",
+    "bootstrap-icons": "^1.13.1"
   },
   "name": "si_portal",
   "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img src=\"https://raw.githubusercontent.com/laravel/art/master/logo-lockup/5%20SVG/2%20CMYK/1%20Full%20Color/laravel-logolockup-cmyk-red.svg\" width=\"400\" alt=\"Laravel Logo\"></a></p>",
